--- a/commutative/week11.tex
+++ b/commutative/week11.tex
@@ -172,7 +172,7 @@ A Gr\"{o}bner basis of $I$ can be constructed by the following algorithm:
             &= X^{\alpha-\beta_{st}}\overset{m}{\underset{j = 1}{\sum}}{l_jg_j} \text{ (by division)}
           \end{split}
         \]
-      \item Then, $\partial(l_jg_j) < \beta_{st} \implies$ we found a expression
+      \item Then, $\partial(l_jg_j) < \beta_{st} \implies$ we found an expression
         with multidegree less than $\alpha$, which is a contradiction.
         Therefore, $\partial(f) = \alpha \implies \LT(f) =
         \sum\limits_{\partial(h_ig_i) = \alpha} \LT(h_i)\LT(g_i)$
