--- a/commutative/week9.tex
+++ b/commutative/week9.tex
@@ -233,7 +233,7 @@ Let $p$ be a prime in $\Zb$.
       & p \text{ is a prime in } \Zb[\sqrt{-1}] \\
       \iff \ & \gen{p} \text{ is maximal ideal } \\
       \iff \ & \frac{\Zb[\sqrt{-1}]}{\gen{p}} \cong \frac{\Zb[x]}{\gen{p, x^2+1}}
-      \cong \frac{\Zb[x]/\gen{p}}{\gen{p, x^2+1}/\gen{p}} \cong \frac{\Fb_p[x]}{x^2+1}
+      \cong \frac{\Zb[x]/\gen{p}}{\gen{p, x^2+1}/\gen{p}} \cong \frac{\Fb_p[x]}{\gen{x^2+1}}
       \text{ is a field } \\
       \iff \ & x^2 + 1 \text{ irreducible in } \Fb_p[x] \\
       \iff \ & x^2 \equiv -1 \pmod{p} \text{ is not solvable } \\
