--- a/homology/week17.tex
+++ b/homology/week17.tex
@@ -120,7 +120,8 @@ Notice that $X[-k]$ is defined as $X[-k]^n = X^{n-k}$ with $d_{X[-k]} = (-1)^k d
             Z^\bullet \ar[r, "\pi"] &
             \cone(s)
           \end{tikzcd} \]
-        One can check that $g$ is a chain map. Now, we have $ft = p[-1]gt$,
+        One can easily check that $g$ is a chain map, which congruent
+        with the boundary map (because of $h^i$). Now, we have $ft = p[-1]gt$,
         but $gt \simeq 0$ by
         \[ \begin{tikzcd}[row sep=0]
             k_n: & W^n = X^n \oplus Y^{n-1} \oplus Z^{n-2} \ar[r]
