--- a/commutative/week13.tex
+++ b/commutative/week13.tex
@@ -169,7 +169,7 @@
 \end{lemma}
 
 \begin{lemma}
-If $R$ is Northerian and $\dim R = 0$, then exists $\mf_i, n_i$ so that
+If $R$ is Northerian and $\dim R = 0$, then there exist $\mf_i, n_i$ so that
 $\mf_1^{n_1} \mf_2^{n_2} \dotsm \mf_k^{n_k} = \gen{0}$.
 
 \begin{proof}
@@ -298,7 +298,7 @@ $\mf_1^{n_1} \mf_2^{n_2} \dotsm \mf_k^{n_k} = \gen{0}$.
     $m = \min\Set{l \in \Nb \mid x = t^l u, \, \forall x \in I}$.
     Then $I = \gen{t^m}$.
     \begin{proof}
-      ``$\subseteq$'': Immediate by the previous statement.
+      ``$\subseteq$'': Immediately by the previous statement.
       ``$\supseteq$'': Let $x = t^m u$ be the one letting $l = m$,
       then $t^m = x u'$ for some $u'$ since where $u$ is a unit.
     \end{proof}
@@ -348,8 +348,8 @@ $\mf_1^{n_1} \mf_2^{n_2} \dotsm \mf_k^{n_k} = \gen{0}$.
     is a prime, and thus $\Ann(\bar{x}) = \mf$.
     Now, $x \mf \subset \gen{t} = tR$, so $J \triangleq (x/t) \mf \subset R$ in the field of fraction.
     \begin{itemize}
-      \item If $J = R$, then exists $y \in \mf$ so that $xy / t = 1 \implies t = xy \in M^2$,
-        contradict the definition of $t$.
+      \item If $J = R$, then there exists $y \in \mf$ so that $xy / t = 1 \implies t = xy \in M^2$,
+        which is a contradiction the definition of $t$.
       \item If $J \neq R$, then $J$ is contained in the maximal ideal $\mf$,
         so $(x/t) \mf = \mf$. Since $\mf$ finitely generated, $\mf = \gen{y_1, \dots, y_k}$.
         Then $(x/t) y_i = \sum a_{i, j} y_j$. Using the routine determinant trick,
