--- a/homology/week14.tex
+++ b/homology/week14.tex
@@ -75,7 +75,7 @@ N is injective and $0 \to M \to N$?
     \end{tikzcd}
   \]
   \begin{proof}
-    ``$\Rightarrow$'': See $I$ as an $R$ module, then it is immediate by the
+    ``$\Rightarrow$'': See $I$ as an $R$ module, then it is obivous by the
     definition of injective module.
 
     ``$\Leftarrow$: Consider the following diagram:
