--- a/homology/week16.tex
+++ b/homology/week16.tex
@@ -610,4 +610,5 @@ letting $RF$ be a exact functor.
   and $Q(f) = [(\Id_X, f)]$. For the universal property, if $F$
   is another functor making every morphism in $S$ be invertible,
   then the functor $G$ exists uniquely by $G([(s, f)]) = F(f) F(s)^{-1}$.
+  By induction hypothesis, we can say $m - 1 = n - 1$. Done.
 \end{theorem}
