--- a/main.tex
+++ b/main.tex
@@ -77,9 +77,9 @@
 %%%%%%%%%%%%%%中文 Environment%%%%%%%%%%%%%%%
 \usepackage[CheckSingle, CJKmath]{xeCJK}  % xelatex 中文
 \usepackage{CJKulem}	% 中文字裝飾
-\setCJKmainfont[BoldFont=cwTeX Q Hei]{cwTeX Q Ming}
-\setCJKsansfont[BoldFont=cwTeX Q Hei]{cwTeX Q Ming}
-\setCJKmonofont[BoldFont=cwTeX Q Hei]{cwTeX Q Ming}
+\setCJKmainfont[BoldFont=Noto Sans CJK TC Bold]{Noto Serif CJK TC}
+\setCJKsansfont[BoldFont=Noto Sans CJK TC Bold]{Noto Serif CJK TC}
+\setCJKmonofont[BoldFont=Noto Sans CJK TC Bold]{Noto Serif CJK TC}
 
 %%%%%%%%%%%%%%%%%font size%%%%%%%%%%%%%%%%%%%
 \renewcommand{\baselinestretch}{1.1}
@@ -374,7 +374,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
-\iffalse
+%\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -398,7 +398,7 @@
 \include{fields/week6}
 \include{fields/week7}
 \include{fields/week8}
-\fi
+%\fi
 \include{commutative/week9}
 \include{commutative/week10}
 \include{commutative/week11}
