--- a/homology/week16.tex
+++ b/homology/week16.tex
@@ -600,7 +600,7 @@ letting $RF$ be a exact functor.
   diagram:
   \[ \begin{tikzcd}[column sep=tiny]
       & & {\color{red} \exists U}
-      \ar[ld, "S \ni u"', red] \ar[rd, "h", red] & {\footnotesize \color{red} \text{by 2.}} & \\
+      \ar[ld, "S \ni u"', red] \ar[rd, "h", red] & \text{\footnotesize \color{red} by 2.} & \\
       & X \ar[ld, "s"'] \ar[rd, "f"] & & Y \ar[ld, "t"'] \ar[rd, "g"] & \\
       A & & B & & C \\
     \end{tikzcd} \]
